<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical" >
    
    
    
    
    <Button 
        android:layout_width="fill_parent"
        android:layout_height="50dip"
        android:text="@string/qr_encoder"
        android:onClick="onClick"
        android:id="@+id/bu_gotoencoder"
        />
    
    <Button 
        android:layout_width="fill_parent"
        android:text="@string/qr_decoder"
        android:layout_height="50dip"
        android:onClick="onClick"
        android:id="@+id/bu_gotodecoder"
        />
    
     <Button 
        android:layout_width="fill_parent"
        android:text="@string/qr_decoderfromfile"
        android:layout_height="50dip"
        android:onClick="onClick"
        android:id="@+id/bu_decoderfromfile"
        />
     
     

</LinearLayout>
