<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@android:color/white"
    android:orientation="vertical" >

    <EditText
        android:id="@+id/et_encoder"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:hint="@string/inputtext" />

    <Button
        android:id="@+id/bu_text"
        android:layout_width="fill_parent"
        android:onClick="onClick"
        android:layout_height="wrap_content"
        android:text="@string/onlytext" />
    
     <Button
        android:id="@+id/bu_textandpic"
        android:onClick="onClick"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:text="@string/textandpic" />

    <ImageView
        android:id="@+id/qr_img"
        android:layout_width="wrap_content"
        android:layout_gravity="center_horizontal"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dip" />

   

</LinearLayout>